fixed some spacing

--- a/src/radio/styles.css
+++ b/src/radio/styles.css
@@ -1,7 +1,7 @@
 .rating{
     display:flex;
     margin-top:7.5px;
-    padding:2rem 0;
+    padding:1rem 0;
 }
 .rating h3{
     width:100px;
